--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,38 +14,23 @@
     <nav class="global-nav">
         <div class="nav-container">
             <a href="/" class="logo">
-                <svg width="140" height="40" viewBox="0 0 140 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <!-- Supernova Core -->
-                    <circle cx="20" cy="20" r="4" fill="url(#gradient1)"/>
-                    <!-- Supernova Rays -->
-                    <path d="M20 8 L20 4" stroke="url(#gradient2)" stroke-width="2" stroke-linecap="round"/>
-                    <path d="M20 36 L20 32" stroke="url(#gradient2)" stroke-width="2" stroke-linecap="round"/>
-                    <path d="M8 20 L4 20" stroke="url(#gradient2)" stroke-width="2" stroke-linecap="round"/>
-                    <path d="M36 20 L32 20" stroke="url(#gradient2)" stroke-width="2" stroke-linecap="round"/>
-                    <path d="M11 11 L8 8" stroke="url(#gradient2)" stroke-width="1.5" stroke-linecap="round"/>
-                    <path d="M29 29 L32 32" stroke="url(#gradient2)" stroke-width="1.5" stroke-linecap="round"/>
-                    <path d="M29 11 L32 8" stroke="url(#gradient2)" stroke-width="1.5" stroke-linecap="round"/>
-                    <path d="M11 29 L8 32" stroke="url(#gradient2)" stroke-width="1.5" stroke-linecap="round"/>
-                    <!-- Orbital Rings -->
-                    <circle cx="20" cy="20" r="8" stroke="url(#gradient3)" stroke-width="1" fill="none" opacity="0.6"/>
-                    <circle cx="20" cy="20" r="12" stroke="url(#gradient3)" stroke-width="0.8" fill="none" opacity="0.4"/>
-                    <!-- Text -->
-                    <text x="44" y="26" font-family="Pretendard, sans-serif" font-size="20" font-weight="800" fill="currentColor">SNOVAHA</text>
-                    <!-- Gradients -->
+                <svg width="155" height="40" viewBox="0 0 155 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <defs>
-                        <linearGradient id="gradient1" x1="16" y1="16" x2="24" y2="24">
-                            <stop offset="0%" style="stop-color:#3182f6;stop-opacity:1" />
-                            <stop offset="100%" style="stop-color:#4d7cfe;stop-opacity:1" />
-                        </linearGradient>
-                        <linearGradient id="gradient2" x1="0%" y1="0%" x2="100%" y2="100%">
-                            <stop offset="0%" style="stop-color:#3182f6;stop-opacity:0.8" />
-                            <stop offset="100%" style="stop-color:#4d7cfe;stop-opacity:0.4" />
-                        </linearGradient>
-                        <linearGradient id="gradient3" x1="0%" y1="0%" x2="100%" y2="100%">
-                            <stop offset="0%" style="stop-color:#3182f6;stop-opacity:1" />
-                            <stop offset="100%" style="stop-color:#4d7cfe;stop-opacity:1" />
-                        </linearGradient>
+                        <filter id="glow-star">
+                            <feGaussianBlur stdDeviation="2" result="coloredBlur"/>
+                            <feMerge>
+                                <feMergeNode in="coloredBlur"/>
+                                <feMergeNode in="coloredBlur"/>
+                                <feMergeNode in="coloredBlur"/>
+                                <feMergeNode in="SourceGraphic"/>
+                            </feMerge>
+                        </filter>
                     </defs>
+                    <!-- 글로우 스타 듀얼 -->
+                    <path d="M15 8 L17 15 L24 16 L19 20 L21 27 L15 23 L9 27 L11 20 L6 16 L13 15 Z" fill="#60a5fa" filter="url(#glow-star)" opacity="0.9"/>
+                    <path d="M22 11 L24 18 L31 19 L26 23 L28 30 L22 26 L16 30 L18 23 L13 19 L20 18 Z" fill="#c084fc" filter="url(#glow-star)" opacity="0.7"/>
+                    <!-- 텍스트 -->
+                    <text x="46" y="26" font-family="Pretendard, sans-serif" font-size="20" font-weight="800" fill="currentColor">SNOVAHA</text>
                 </svg>
             </a>
             <div class="nav-links">
