feat: 각도법 페이지에 초음파 예시 이미지 추가
- 초음파 이미지 섹션 추가
- 세련된 이미지 카드 디자인 (border-radius, shadow)
- 이미지 캡션 추가
- 히어로 섹션 패딩 조정
- ultrasound-example.jpg 업로드

--- a/src/public/nub-theory/index.html
+++ b/src/public/nub-theory/index.html
@@ -3,16 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>각도법 · SNOVAHA</title>
+    <title>각도법 (Nub Theory) · SNOVAHA</title>
     <link rel="stylesheet" href="../assets/css/home.css">
+    <style>
+        .ultrasound-visual {
+            max-width: 800px;
+            margin: 60px auto;
+            padding: 0 24px;
+        }
+        .ultrasound-image {
+            width: 100%;
+            border-radius: 24px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);
+            border: 1px solid var(--border);
+        }
+        .image-caption {
+            text-align: center;
+            margin-top: 20px;
+            color: var(--text-secondary);
+            font-size: 15px;
+            font-weight: 500;
+        }
+    </style>
 </head>
 <body>
-    <section class="home-hero" style="padding:48px 20px 24px">
+    <section class="home-hero" style="padding:120px 20px 80px">
         <div class="home-hero-inner">
-            <h1 class="brand">각도법</h1>
+            <h1 class="brand" style="font-size: 64px;">각도법</h1>
             <p class="tagline">임신 11–13주차 초음파 사진에서 측정되는 각도로 성별을 확률적으로 예측합니다.</p>
         </div>
-        <div class="hero-bg"></div>
+    </section>
+
+    <!-- 초음파 이미지 섹션 -->
+    <section class="ultrasound-visual">
+        <img src="assets/images/ultrasound-example.jpg" alt="초음파 각도법 예시" class="ultrasound-image">
+        <p class="image-caption">📸 초음파 각도법 측정 예시 이미지</p>
     </section>
 
     <section class="features" style="padding-top:0">
