--- a/src/public/index.html
+++ b/src/public/index.html
@@ -68,7 +68,7 @@
                 <p>임신 11–13주차 초음파의 측정 각도를 기반으로 확률적 성별 예측.</p>
                 <a href="/nub-theory/" class="link">바로가기 →</a>
             </div>
-            <div class="feature-visual feature-angle"></div>
+            <div class="feature-visual feature-nub-theory"></div>
         </div>
     </section>
 
