refactor: benefits와 community를 별도 레포로 분리
- snovaha-benefits 레포로 이동
- snovaha-community 레포로 이동
- MSA 구조로 완전 분리 완료

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -36,6 +36,8 @@
             <div class="nav-links">
                 <a href="/invitation/" class="nav-link">초대장</a>
                 <a href="/nub-theory/" class="nav-link">각도법</a>
+                <a href="/benefits/" class="nav-link">육아혜택</a>
+                <a href="/community/" class="nav-link">커뮤니티</a>
             </div>
         </div>
     </nav>
@@ -70,36 +72,31 @@
             </div>
             <div class="feature-visual feature-nub-theory"></div>
         </div>
-    </section>
-
-    <!-- Stories / Blog Teasers -->
-    <section id="stories" class="stories">
-        <h2>육아 인사이트</h2>
-        <div class="cards">
-            <article class="card">
-                <h3>첫 1000일 돌봄</h3>
-                <p>수면, 이유식, 발달을 과학적으로 접근하는 부모 가이드.</p>
-                <a class="link" href="#">읽어보기</a>
-            </article>
-            <article class="card">
-                <h3>사진으로 남기는 성장기록</h3>
-                <p>월별 촬영 팁과 배경음악 추천으로 감성 영상 만들기.</p>
-                <a class="link" href="#">읽어보기</a>
-            </article>
-            <article class="card">
-                <h3>초음파 각도법 이해하기</h3>
-                <p>각도 측정 기준과 해석의 한계, 신뢰도 체크리스트.</p>
-                <a class="link" href="#">읽어보기</a>
-            </article>
+        <div class="feature">
+            <div class="feature-text">
+                <h2>육아 혜택</h2>
+                <p>임산부·유아 가족을 위한 정부 지원금, 할인 혜택, 육아 정보를 한눈에 확인하세요.</p>
+                <a href="/benefits/" class="link">혜택 보기 →</a>
+            </div>
+            <div class="feature-visual feature-benefits"></div>
+        </div>
+        <div class="feature">
+            <div class="feature-text">
+                <h2>육아 커뮤니티</h2>
+                <p>같은 고민을 나누는 부모들과 함께. 육아 팁, 경험담, 질문을 자유롭게 나눠보세요.</p>
+                <a href="/community/" class="link">커뮤니티 →</a>
+            </div>
+            <div class="feature-visual feature-community"></div>
         </div>
     </section>
 
     <!-- CTA -->
     <section id="cta" class="cta">
-        <h2>부모의 이야기를 더 아름답게</h2>
+        <h2>부모의 여정을 함께 나눠요</h2>
+        <p style="font-size: 18px; color: var(--text-secondary); margin-bottom: 40px;">초대장부터 육아 정보까지, SNOVAHA와 함께하세요</p>
         <div class="cta-buttons">
-            <a href="/invitation/" class="btn primary">초대장 만들기</a>
-            <a href="/nub-theory/" class="btn outline">각도법 사용하기</a>
+            <a href="/benefits/" class="btn primary">육아 혜택 보기</a>
+            <a href="/community/" class="btn outline">커뮤니티 참여하기</a>
         </div>
     </section>
 
