feat: 메인 페이지 대폭 심플화 및 개선
✨ 주요 변경사항:
- 히어로 섹션: 버튼 제거, 심플한 텍스트만 표시
- Features → Services Grid: 4개 카드 그리드 레이아웃
- 육아혜택 카드에 '인기' 뱃지 추가
- 새로운 '이번 달 육아 혜택' 섹션 추가 (광고/프로모션)
- 카드 호버 효과 및 애니메이션 강화

🎨 디자인:
- 더 모던하고 심플한 레이아웃
- 아이콘 이모지로 직관성 향상
- 카드 상단 그라데이션 라인 효과
- 육아혜택 강조 (옐로우 배경)

📱 모바일:
- 2열 서비스 카드 그리드
- 1열 혜택 프리뷰
- 반응형 폰트 크기 조정

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -46,58 +46,60 @@
     <section id="home-hero" class="home-hero">
         <div class="home-hero-inner">
             <h1 class="brand">SNOVAHA</h1>
-            <p class="tagline">부모의 여정을 가장 아름답게</p>
-            <div class="cta-group">
-                <a href="/invitation/" class="btn primary">돌잔치 초대장</a>
-                <a href="/nub-theory/" class="btn secondary">각도법 (성별 예측)</a>
-            </div>
-        </div>
-        <div class="hero-bg"></div>
-    </section>
-
-    <!-- Features -->
-    <section id="features" class="features">
-        <div class="feature">
-            <div class="feature-text">
-                <h2>돌잔치 초대장</h2>
-                <p>모바일에 최적화된 감성 초대장. 갤러리, 음악, 라이트박스, 일정, 위치 안내까지 완벽 지원.</p>
-                <a href="/invitation/" class="link">바로가기 →</a>
-            </div>
-            <div class="feature-visual feature-invitation"></div>
-        </div>
-        <div class="feature">
-            <div class="feature-text">
-                <h2>각도법 (성별 예측)</h2>
-                <p>임신 11–13주차 초음파의 측정 각도를 기반으로 확률적 성별 예측.</p>
-                <a href="/nub-theory/" class="link">바로가기 →</a>
-            </div>
-            <div class="feature-visual feature-nub-theory"></div>
-        </div>
-        <div class="feature">
-            <div class="feature-text">
-                <h2>육아 혜택</h2>
-                <p>임산부·유아 가족을 위한 정부 지원금, 할인 혜택, 육아 정보를 한눈에 확인하세요.</p>
-                <a href="/benefits/" class="link">혜택 보기 →</a>
-            </div>
-            <div class="feature-visual feature-benefits"></div>
-        </div>
-        <div class="feature">
-            <div class="feature-text">
-                <h2>육아 커뮤니티</h2>
-                <p>같은 고민을 나누는 부모들과 함께. 육아 팁, 경험담, 질문을 자유롭게 나눠보세요.</p>
-                <a href="/community/" class="link">커뮤니티 →</a>
-            </div>
-            <div class="feature-visual feature-community"></div>
+            <p class="tagline">임신부터 육아까지, 모든 순간을 함께합니다</p>
+            <p class="tagline-sub">초대장 제작, 성별 예측, 육아 혜택, 커뮤니티까지</p>
         </div>
     </section>
 
-    <!-- CTA -->
-    <section id="cta" class="cta">
-        <h2>부모의 여정을 함께 나눠요</h2>
-        <p style="font-size: 18px; color: var(--text-secondary); margin-bottom: 40px;">초대장부터 육아 정보까지, SNOVAHA와 함께하세요</p>
-        <div class="cta-buttons">
-            <a href="/benefits/" class="btn primary">육아 혜택 보기</a>
-            <a href="/community/" class="btn outline">커뮤니티 참여하기</a>
+    <!-- Services Grid -->
+    <section id="services" class="services">
+        <div class="services-grid">
+            <a href="/invitation/" class="service-card">
+                <div class="service-icon">🎉</div>
+                <h3>돌잔치 초대장</h3>
+                <p>감성적인 모바일 초대장</p>
+            </a>
+            <a href="/nub-theory/" class="service-card">
+                <div class="service-icon">👶</div>
+                <h3>각도법</h3>
+                <p>임신 초기 성별 예측</p>
+            </a>
+            <a href="/benefits/" class="service-card service-card-highlight">
+                <div class="service-icon">🎁</div>
+                <h3>육아 혜택</h3>
+                <p>정부 지원금 & 할인</p>
+                <span class="badge">인기</span>
+            </a>
+            <a href="/community/" class="service-card">
+                <div class="service-icon">💬</div>
+                <h3>커뮤니티</h3>
+                <p>육아 팁 & 정보 공유</p>
+            </a>
+        </div>
+    </section>
+
+    <!-- Latest Benefits (간단 광고 섹션) -->
+    <section id="latest" class="latest-section">
+        <div class="latest-header">
+            <h2>🔥 이번 달 놓치지 말아야 할 육아 혜택</h2>
+            <a href="/benefits/" class="link-more">전체보기 →</a>
+        </div>
+        <div class="benefits-preview">
+            <div class="benefit-item">
+                <span class="benefit-tag">정부지원</span>
+                <h4>첫만남 이용권 200만원</h4>
+                <p>출생 후 60일 이내 신청</p>
+            </div>
+            <div class="benefit-item">
+                <span class="benefit-tag">할인혜택</span>
+                <h4>다둥이 행복카드</h4>
+                <p>2자녀 이상 가정 최대 50% 할인</p>
+            </div>
+            <div class="benefit-item">
+                <span class="benefit-tag">육아정보</span>
+                <h4>육아휴직 급여 인상</h4>
+                <p>2025년 상향 조정 완료</p>
+            </div>
         </div>
     </section>
 
