feat: 히어로 섹션 밝은 테마로 변경 및 육아 혜택 확장
☀️ 히어로 밝은 테마:
- 다크 배경 → 밝은 블루/핑크/피치 그라데이션
- 흰색 텍스트 → 다크 텍스트 (가독성 향상)
- 육아에 맞는 부드럽고 따뜻한 느낌
- 별, 하트, 동그라미 패턴으로 귀여운 느낌

🎁 육아 혜택 대폭 확장 (3개 → 6개):
1. 첫만남 이용권 200만원 (복지로)
2. 6+6 부모육아휴직제 (고용노동부) NEW!
3. 부모급여 0~1세 (복지로) NEW!
4. 아동수당 만 8세 미만 (복지로) NEW!
5. 다둥이 행복카드 (동대문구청)
6. 서울아기 건강첫걸음 (서울시) NEW!

🔗 실제 신청 링크 연결:
- 모든 혜택 카드 클릭 시 정부/지자체 신청 페이지로 이동
- target=_blank로 새 탭에서 열기
- 호버 효과 강화 (border + shadow)

📱 반응형 그리드 유지

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -85,21 +85,36 @@
             <a href="/benefits/" class="link-more">전체보기 →</a>
         </div>
         <div class="benefits-preview">
-            <div class="benefit-item">
+            <a href="https://www.bokjiro.go.kr/ssis-tbu/twataa/wlfareInfo/moveTWAT52011M.do?wlfareInfoId=WLF00004520" target="_blank" class="benefit-item">
                 <span class="benefit-tag">정부지원</span>
                 <h4>첫만남 이용권 200만원</h4>
-                <p>출생 후 60일 이내 신청</p>
-            </div>
-            <div class="benefit-item">
+                <p>출생 후 60일 이내 신청 • 복지로 신청 →</p>
+            </a>
+            <a href="https://www.moel.go.kr/policy/policyinfo/support/list4.do" target="_blank" class="benefit-item">
+                <span class="benefit-tag">육아휴직</span>
+                <h4>6+6 부모육아휴직제</h4>
+                <p>동시 사용 시 최대 월 450만원 • 고용노동부 →</p>
+            </a>
+            <a href="https://www.bokjiro.go.kr/ssis-tbu/twataa/wlfareInfo/moveTWAT52011M.do?wlfareInfoId=WLF00003982" target="_blank" class="benefit-item">
+                <span class="benefit-tag">정부지원</span>
+                <h4>부모급여 (0~1세)</h4>
+                <p>2024년 100만원 • 2025년 확대 예정 →</p>
+            </a>
+            <a href="https://www.bokjiro.go.kr/ssis-tbu/twataa/wlfareInfo/moveTWAT52011M.do?wlfareInfoId=WLF00000162" target="_blank" class="benefit-item">
+                <span class="benefit-tag">정부지원</span>
+                <h4>아동수당 (만 8세 미만)</h4>
+                <p>월 10만원 • 매월 25일 지급 →</p>
+            </a>
+            <a href="https://www.dd.go.kr/www/contents.do?key=3683" target="_blank" class="benefit-item">
                 <span class="benefit-tag">할인혜택</span>
                 <h4>다둥이 행복카드</h4>
-                <p>2자녀 이상 가정 최대 50% 할인</p>
-            </div>
-            <div class="benefit-item">
-                <span class="benefit-tag">육아정보</span>
-                <h4>육아휴직 급여 인상</h4>
-                <p>2025년 상향 조정 완료</p>
-            </div>
+                <p>2자녀 이상 가정 최대 50% 할인 →</p>
+            </a>
+            <a href="https://www.seoul.go.kr/news/news_report.do#view/358858" target="_blank" class="benefit-item">
+                <span class="benefit-tag">서울시</span>
+                <h4>서울아기 건강첫걸음</h4>
+                <p>출생아 1인당 70만원 지원 →</p>
+            </a>
         </div>
     </section>
 
