refactor: 레이아웃 완전 개선 - 더 세련되고 프리미엄한 디자인
🎨 서비스 섹션 개선:
- 섹션 제목 추가 (SNOVAHA의 서비스)
- 서비스 카드 호버 애니메이션 강화 (12px 상승)
- 큐빅 베지어 곡선으로 자연스러운 애니메이션
- 아이콘 크기 48px → 56px
- 전체 여백 증가 (더 호흡감 있게)

💰 혜택 섹션 완전 재설계:
- 3x2 그리드 → 더 시각적인 배치
- 텍스트 기반 → 이모지 + 금액 중심
- 혜택 태그 제거, 이모지 추가
- 금액을 시각적 강조 (18px 블루 굵은 글씨)
- 카드 상단 라인 호버 효과 추가
- 전체 여백 48px (더 프리미엄함)

✨ 디자인 개선:
- 더 부드러운 그림자 효과
- 정교한 호버 애니메이션
- 센터 정렬로 깔끔한 배치
- 모바일 2x3 그리드 유지

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -53,6 +53,7 @@
 
     <!-- Services Grid -->
     <section id="services" class="services">
+        <h2 class="section-title">SNOVAHA의 서비스</h2>
         <div class="services-grid">
             <a href="/invitation/" class="service-card">
                 <div class="service-icon">🎉</div>
@@ -81,39 +82,45 @@
     <!-- Latest Benefits (간단 광고 섹션) -->
     <section id="latest" class="latest-section">
         <div class="latest-header">
-            <h2>🔥 이번 달 놓치지 말아야 할 육아 혜택</h2>
-            <a href="/benefits/" class="link-more">전체보기 →</a>
+            <h2>🔥 놓치면 안 될 육아 혜택</h2>
+            <a href="/benefits/" class="link-more">모든 혜택 보기 →</a>
         </div>
-        <div class="benefits-preview">
-            <a href="https://www.bokjiro.go.kr/ssis-tbu/twataa/wlfareInfo/moveTWAT52011M.do?wlfareInfoId=WLF00004520" target="_blank" class="benefit-item">
-                <span class="benefit-tag">정부지원</span>
-                <h4>첫만남 이용권 200만원</h4>
-                <p>출생 후 60일 이내 신청 • 복지로 신청 →</p>
+        <div class="benefits-grid">
+            <a href="https://www.bokjiro.go.kr/" target="_blank" class="benefit-card benefit-card-1">
+                <div class="benefit-icon">🎫</div>
+                <h4>첫만남 이용권</h4>
+                <p>200만원</p>
+                <span class="benefit-note">출생 후 신청</span>
             </a>
-            <a href="https://www.moel.go.kr/policy/policyinfo/support/list4.do" target="_blank" class="benefit-item">
-                <span class="benefit-tag">육아휴직</span>
+            <a href="https://www.moel.go.kr/" target="_blank" class="benefit-card benefit-card-2">
+                <div class="benefit-icon">👨‍👩‍👧</div>
                 <h4>6+6 부모육아휴직제</h4>
-                <p>동시 사용 시 최대 월 450만원 • 고용노동부 →</p>
+                <p>월 450만원</p>
+                <span class="benefit-note">동시 사용 시</span>
             </a>
-            <a href="https://www.bokjiro.go.kr/ssis-tbu/twataa/wlfareInfo/moveTWAT52011M.do?wlfareInfoId=WLF00003982" target="_blank" class="benefit-item">
-                <span class="benefit-tag">정부지원</span>
-                <h4>부모급여 (0~1세)</h4>
-                <p>2024년 100만원 • 2025년 확대 예정 →</p>
+            <a href="https://www.bokjiro.go.kr/" target="_blank" class="benefit-card benefit-card-3">
+                <div class="benefit-icon">💰</div>
+                <h4>부모급여</h4>
+                <p>월 100만원</p>
+                <span class="benefit-note">0~1세</span>
             </a>
-            <a href="https://www.bokjiro.go.kr/ssis-tbu/twataa/wlfareInfo/moveTWAT52011M.do?wlfareInfoId=WLF00000162" target="_blank" class="benefit-item">
-                <span class="benefit-tag">정부지원</span>
-                <h4>아동수당 (만 8세 미만)</h4>
-                <p>월 10만원 • 매월 25일 지급 →</p>
+            <a href="https://www.bokjiro.go.kr/" target="_blank" class="benefit-card benefit-card-4">
+                <div class="benefit-icon">🎁</div>
+                <h4>아동수당</h4>
+                <p>월 10만원</p>
+                <span class="benefit-note">만 8세 미만</span>
             </a>
-            <a href="https://www.dd.go.kr/www/contents.do?key=3683" target="_blank" class="benefit-item">
-                <span class="benefit-tag">할인혜택</span>
+            <a href="https://www.dd.go.kr/" target="_blank" class="benefit-card benefit-card-5">
+                <div class="benefit-icon">💳</div>
                 <h4>다둥이 행복카드</h4>
-                <p>2자녀 이상 가정 최대 50% 할인 →</p>
+                <p>최대 50% 할인</p>
+                <span class="benefit-note">2자녀 이상</span>
             </a>
-            <a href="https://www.seoul.go.kr/news/news_report.do#view/358858" target="_blank" class="benefit-item">
-                <span class="benefit-tag">서울시</span>
+            <a href="https://www.seoul.go.kr/" target="_blank" class="benefit-card benefit-card-6">
+                <div class="benefit-icon">🌟</div>
                 <h4>서울아기 건강첫걸음</h4>
-                <p>출생아 1인당 70만원 지원 →</p>
+                <p>70만원 지원</p>
+                <span class="benefit-note">서울시</span>
             </a>
         </div>
     </section>
